--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         </h1>
         <h2 class="decorated-text">Status: You are <span id="status"></span></h2>
     </div>
+    <div class="keyboard-wrapper">
+        <div class="wrapper">
+            <header>
+            </header>
+        </div>
+    </div>
   </body>
   <script src="script.js" defer></script>
 </html>
