--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <div class="keyboard-wrapper">
         <div class="wrapper">
             <header>
+                <h3 class="decorated-text">CodeSpellCasterX Piano</h3>
+                <div class="column volume-slider">
+                <span>Volume</span><input type="range" min="0" max="1" value="0.5" step="any">
+                </div>
+                <div class="column keys-checkbox">
+                <span>Show Keys</span><input type="checkbox" checked>
+                </div>
             </header>
         </div>
     </div>
