--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
                 <span>Show Keys</span><input type="checkbox" checked>
                 </div>
             </header>
+            <ul class="piano-keys">
+                <li class="key white" data-key="s"><span>s</span></li>
+                <li class="key black" data-key="w"><span>w</span></li>
+                <li class="key white" data-key="r"><span>r</span></li>
+                <li class="key black" data-key="e"><span>e</span></li>
+                <li class="key white" data-key="g"><span>g</span></li>
+                <li class="key white" data-key="m"><span>m</span></li>
+                <li class="key black" data-key="t"><span>t</span></li>
+                <li class="key white" data-key="p"><span>p</span></li>
+                <li class="key black" data-key="y"><span>y</span></li>
+                <li class="key white" data-key="d"><span>d</span></li>
+                <li class="key black" data-key="u"><span>u</span></li>
+                <li class="key white" data-key="n"><span>n</span></li>
+                <li class="key white" data-key="k"><span>k</span></li>
+                <li class="key black" data-key="o"><span>o</span></li>
+                <li class="key white" data-key="l"><span>l</span></li>
+                <li class="key black" data-key="q"><span>q</span></li>
+                <li class="key white" data-key=";"><span>;</span></li>
+            </ul>
         </div>
     </div>
   </body>
