Added Drop your learning video code

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             </ul>
         </div>
     </div>
+    <div>
+        <div style="display: flex; justify-content: center;">
+          <div id="drop-area">
+            <h2 class="decorated-text">Drop your learning videos here ⬇</h2>
+          </div>
+        </div>
+        <div id="cards-container"></div>
+      </div>
   </body>
   <script src="script.js" defer></script>
 </html>
