Added AI Bot assitant

--- a/index.html
+++ b/index.html
@@ -54,5 +54,15 @@
         <div id="cards-container"></div>
       </div>
   </body>
+  <div id="chatbot-container">
+    <div id="chatbot-button">Ask Your Query 🤔</div>
+    <div id="chat-window" class="hidden">
+      <div id="chat-header">AI Assistant 🤖</div>
+      <div id="chat-body">
+        <div id="chat-messages"></div>
+        <input type="text" id="chat-input" placeholder="Type your message here...">
+      </div>
+    </div>
+  </div>
   <script src="script.js" defer></script>
 </html>
