Added timer & web notification Functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         </h1>
         <h2 class="decorated-text">Status: You are <span id="status"></span></h2>
     </div>
+    <div id="timer-container">
+        <span id="timer" class="decorated-text hidden">00:00</span>
+      </div>
+      <button id="start-timer-btn" onclick="startTimer(10)">Start 10 Second Timer</button>
     <div class="keyboard-wrapper">
         <div class="wrapper">
             <header>
