--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <div class="keyboard-wrapper">
         <div class="wrapper">
             <header>
-                <h3 class="decorated-text">CodeSpellCasterX Piano</h3>
+                <div style="display: flex; flex-direction: column;">
+                    <h3 class="decorated-text">CodeSpellCasterX Piano</h3>
+                    <h6>Code Reference - <a href="https://www.codingnepalweb.com/playable-piano-html-css-javascript/"> Link</a></h6>
+                </div>
                 <div class="column volume-slider">
                 <span>Volume</span><input type="range" min="0" max="1" value="0.5" step="any">
                 </div>
